# chelonian

./: .gitignore  Cargo.toml  LICENSE  README.md  RULES.md  example_report.toml  report.md  result.html  result.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish-manual.yaml  publish-report.yml  release-drafter.yml  release2publish.yaml
assets/report/: app.js  index.html  style.css
builtin-rules/ros1/: basic.toml
builtin-rules/ros2/: basic.toml
docs/: github_pages_report.toml  github_pages_report_ros2.toml  index.html
examples/rules/: ros1-header-ros.toml
src/: analyzer.rs  main.rs  scanner.rs  tests.rs
src/commands/: analyze.rs  init.rs  mod.rs  report.rs  run.rs
src/models/: cmake.rs  cpp.rs  mod.rs  package.rs  report.rs
src/output/: json.rs  mod.rs  text.rs
src/parsers/: cmake.rs  cpp.rs  mod.rs  package.rs
src/plugins/: engine.rs  loader.rs  mod.rs  rule.rs
templates/rules/ros2/: basic.toml
tests/: report_warnings.rs  run.rs
