[package]
name = "chelonian"
version = "0.1.0"
edition = "2021"
description = "Static analyzer for ROS workspaces"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mr/chelonian"
documentation = "https://docs.rs/chelonian"
authors = ["MrBearing <takumi1988okamoto@gmail.com>"]
keywords = ["ros", "ros2", "static-analysis", "migration", "robotics"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "chel"
path = "src/main.rs"

[dependencies]
roxmltree = "0.20"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
toml = "0.8"
glob = "0.3"
dirs-next = "2.0"

[dev-dependencies]
tempfile = "3.5"